# pickapic

./: LICENSE  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release-windows.yml
.serena/: project.yml
src/pickpic/: config.py  main.py
src/pickpic/core/: actions.py  blur.py  hasher.py  index.py  scan_control.py  scanner.py  similarity.py
src/pickpic/ui/: app.py
src/pickpic/ui/components/: action_bar.py  group_row.py  image_card.py  sidebar.py
src/pickpic/ui/views/: about.py  results.py  scanner.py  settings.py
venv_build/: pyvenv.cfg
venv_build/Scripts/: activate  activate.bat
